<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".AccountActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/account" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:paddingBottom="64dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/emailLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            app:layout_constraintBottom_toTopOf="@id/passwordLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/emailTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:layout_constraintBottom_toTopOf="@id/dateLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailLayout"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/passwordTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/dateLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/birthdate"
            app:layout_constraintBottom_toTopOf="@id/sizeSpinner"
            app:layout_constraintEnd_toStartOf="@id/genderSpinner"
            app:layout_constraintHorizontal_weight="3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordLayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/dateTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date" />

        </android.support.design.widget.TextInputLayout>


        <com.jaredrummler.materialspinner.MaterialSpinner
            android:id="@+id/genderSpinner"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            app:layout_constraintBottom_toTopOf="@id/sizeSpinner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/dateLayout"
            app:layout_constraintTop_toBottomOf="@id/passwordLayout" />

        <com.jaredrummler.materialspinner.MaterialSpinner
            android:id="@+id/sizeSpinner"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            app:layout_constraintBottom_toTopOf="@id/updateBtn"
            app:layout_constraintEnd_toStartOf="@id/shoeSizeSpinner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dateLayout"
            app:ms_dropdown_max_height="192dp" />

        <com.jaredrummler.materialspinner.MaterialSpinner
            android:id="@+id/shoeSizeSpinner"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            app:layout_constraintBottom_toTopOf="@id/updateBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/sizeSpinner"
            app:layout_constraintTop_toBottomOf="@id/dateLayout"
            app:ms_dropdown_max_height="192dp" />


        <android.support.design.button.MaterialButton
            android:id="@+id/updateBtn"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:insetLeft="4dp"
            android:insetRight="4dp"
            android:text="@string/update_account"
            app:cornerRadius="18dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sizeSpinner" />

    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>
